--- a/style.css
+++ b/style.css
@@ -52,10 +52,6 @@ body {
     /* transition: 0.3s; */
 }
 
-.header-phone {
-    display: none;
-}
-
 .navbar {
     /* background: rgba(72, 72, 72, 0.2);
     backdrop-filter: blur(8px);  */
@@ -207,7 +203,7 @@ a:nth-child(5):hover~.animation {
     color: white;
     text-decoration: none;
     font-size: 1.8vw;
-    padding: 1vw;
+    padding: 0.5vw;
     background-color: #0087C1;
     border-radius: 5px;
 }
@@ -498,7 +494,7 @@ svg {
 }
 
 .rest-place-title {
-    max-width: 30vw;
+    /* max-width: 30vw; */
     margin: 3vw auto;
     margin-bottom: 1vw;
     font-size: 2.5vw;
@@ -590,8 +586,8 @@ svg {
 }
 
 .red-location {
-    max-width: 3vw;
-    max-height: 2vw;
+    width: 3vw;
+    height: 2vw;
     margin-top: 0.3vw;
 }
 
@@ -653,7 +649,9 @@ svg {
 
     /* flex: 0 0 100%; */
     width: 40vw;
-    margin-left: 1.5vw;
+    /* margin-left: 1.5vw; */
+    margin-right: 6vw;
+    margin-left: 2vw;
     margin-top: 9vw;
 }
 
@@ -1047,10 +1045,7 @@ summary {
     list-style-type: "";
     display: flex;
     align-items: center;
-}
-
-summary img {
-    margin-left: 4vw;
+    justify-content: space-between;
 }
 
 .div2-faq {
@@ -1507,7 +1502,7 @@ summary img {
 
 .item .name {
     font-family: system-ui;
-    font-size: 40px;
+    font-size: 4vw;
     font-weight: bold;
     opacity: 0;
     animation: showcontent 1s ease-in-out 1 forwards;
@@ -1616,10 +1611,6 @@ summary img {
     display: none;
 }
 
-.div-rest-place2 {
-    display: none;
-}
-
 .div-main-header-phone {
     display: block;
 }
@@ -1628,8 +1619,17 @@ summary img {
     display: none;
 }
 
+summary {
+    font-weight: bold;
+}
 
+.div-main-header-phone {
+    display: none;
+}
 
+.navbar:nth-child(2) {
+    display: none;
+}
 
 
 
@@ -1640,12 +1640,20 @@ summary img {
         display: none;
     }
 
+    .navbar:nth-child(2) {
+        display: block;
+    }
+
+
+    .navbar {
+        padding: 0;
+    }
+
     .div-main-header-phone {
         display: block;
         /* position: absolute; */
-        margin: 2vw 0 0 85vw;
+        /* margin: 2vw 0 0 85vw; */
         position: fixed;
-        /* border: 1px solid red; */
     }
     
     /* .div-hamburger h1 {
@@ -1658,7 +1666,8 @@ summary img {
         flex-direction: column;
         display: none;
         position: absolute;
-        z-index: 100;
+        z-index: 99;
+        /* transform: translateX(-85%); */
     }
 
     .div-main-header-phone {
@@ -1676,10 +1685,16 @@ summary img {
 
     .fa-bars {
         font-size: 7vw;
+        padding: 6vw 2vw 6vw 2vw;
+        /* border-radius: 3px; */
+        color: white;
+    }
+    
+    .div-nav-phone {
         background-color: #000E41;
-        padding: 1vw;
-        border-radius: 3px;
-        /* color: white; */
+        /* display: flex; */
+        align-items: center;
+        width: 100vw;
     }
 
     .a-navigation-phone {
@@ -1687,6 +1702,8 @@ summary img {
         color: white;
         background-color: #000E41;
         padding: 20px;
+        width: 89.1vw;
+        border: 1px solid white;
     }
 
     .a-navigation-phone:hover {
@@ -1698,12 +1715,21 @@ summary img {
         display: block;
     }
     
-    .div-rest-place2 {
+    /* .div-rest-place2 {
         display: block;
-    }
+    } */
     
     .div-main-header-phone {
         display: block;
+    }
+
+    Details {
+        padding: 15px;
+    }
+
+    summary {
+        font-weight: bold;
+        font-size: 13.5px;
     }
 
 
@@ -1731,8 +1757,17 @@ summary img {
         width: 90%;
     }
 
+    .div2-title :nth-child(2) {
+        margin-bottom: 50px;
+    }
+
+    .div1-title {
+        padding-top: 150px;
+    }
+
     .button-text {
         font-size: 25px;
+        padding: 2vw;
     }
 
     .div-place {
@@ -1740,7 +1775,6 @@ summary img {
     }
 
     .div-title-hot-place,
-    .container,
     .div-main-souvenirs {
         display: none;
     }
@@ -1752,7 +1786,7 @@ summary img {
     .div-main-testimonials {
         padding: 20px;
         /* width: 100%; */
-        margin-left: 20px;
+        /* margin-left: 2vw; */
     }
 
     .div-main-comments {
@@ -1787,7 +1821,7 @@ summary img {
         width: 90%;
         padding: 10px;
         gap: 20px;
-        margin-left: 23px;
+        margin-left: 2.5vw;
     }
 
     .title-faq {
@@ -1806,7 +1840,7 @@ summary img {
     }
 
     .a-button-faq {
-        width: 40%;
+        width: 50%;
         height: 30px;
         align-items: center;
         padding: 8px;
@@ -1818,7 +1852,8 @@ summary img {
     }
 
     .div-map {
-        padding-left: 12px;
+        /* padding-left: 12px; */
+        padding: 2vw;
     }
 
     .div-comments {
@@ -1926,9 +1961,9 @@ summary img {
         border-radius: 5px;
     }
 
-    .main-div-rest-place {
+    /* .main-div-rest-place {
         display: none;
-    }
+    } */
 
     .div-main-souvenirs2 {
         display: block;
@@ -1972,16 +2007,20 @@ summary img {
         padding: 15px 0 0 0;
         /* border: 1px solid red; */
         display: block;
+        margin-top: 200px;
     }
 
     .div-item-img {
         background-color: white;
         border-radius: 10px;
         display: flex;
-        align-items: flex-start;
-        justify-content: end;
+        /* align-items: flex-start; */
+        align-items: center;
+        justify-content: center;
+        /* justify-content: end; */
         /* padding-right: 15px; */
         padding: 15px 15px 0 15px;
+        height: 220px;
     }
 
     .container-item1-souvenirs2 {
@@ -2003,10 +2042,10 @@ summary img {
     .div-arrow {
         /* position: absolute; */
         gap: 40%;
-        width: 85%;
-        margin-left: 37px;
+        width: 90%;
+        margin-left: 5vw;
         margin-top: -250px;
-        /* z-index: -1; */
+        z-index: 1;
 
     }
 
@@ -2132,7 +2171,7 @@ summary img {
     }
 
     .div-pop-up-login {
-        width: 80%;
+        width: 95% !important
     }
 
     .input-login {
@@ -2154,19 +2193,365 @@ summary img {
 
 
 
-
     .h1-2-kelingking-beach {
         font-size: 30px;
     }
 
-    /* * {
-        border: 1px solid red;
-    } */
-    
+
+
+
+    .container {
+        height: 600px;
+        overflow: hidden;
+
+
+
+        position: relative;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+
+
+        /* width: 100%; */
+
+
+
+        /* height: 38vw; */
+        padding: 130px 50px 50px 50px;
+        background-color: grey;
+        box-shadow: 0 30px 50px #C3C3C3;
+        margin-top: 80vw;
+        z-index: 1;
+
+
+
+
+
+    }
+
+    .item {
+        width: 200px;
+        height: 200px;
+        background-position: 50% 50%;
+        display: inline-block;
+        transition: 0.5s;
+        background-size: cover;
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        transform: translate(-10%, 20%);
+        border-radius: 20px;
+        box-shadow: 0 30px 50px #505050;
+    }
+
+    .item .content {
+        position: absolute;
+        top: 18%;
+        left: 50px;
+        width: 80%;
+        text-align: left;
+        padding: 0;
+        color: #eee;
+        transform: translate(e, -50%);
+        display: none;
+        font-family: system-ui;
+    }
+
+    .item .name {
+        font-family: system-ui;
+        font-weight: bold;
+        margin-bottom: 20px;
+        font-size: 40px !important;
+        opacity: 0;
+        animation: showcontent 1s ease-in-out 1 forwards;
+    }
+
+    .item .des {
+        margin: 30px 0;
+        opacity: 0;
+        animation: showcontent 1s ease-in-out 0.3s 1 forwards;
+    }
+
+    .buttons {
+        position: absolute;
+        bottom: 40px;
+        z-index: 222222;
+        text-align: center;
+        width: 96%;
+        margin-left: -65px;
+        /* z-index: 2; */
+    }
+
+    .arrow-left-hot-place {
+        margin-right: 35vw;
+        margin-left: 9vw;
+    }
+
+    .sub-main-rest-place {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .div-example-rest-place {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .slide1,
+    .div1-rest-place {
+        margin: 0;
+    }
+
+    .div1-image-example-rest-place,
+    .div2-image-example-rest-place,
+    .slide1 {
+        width: 350px;
+        height: 300px;
+    }
+
+    .div-example-rest-place {
+        padding: 0 5vw 0 5vw;
+    }
+
+    .rest-place-title {
+        font-size: 25px;
+        margin-bottom: 50px;
+    }
+
+    .div2-rest-place-title h2 {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .div2-rest-place-title h4 {
+        font-size: 18px;
+        text-align: center;
+        display: none;
+    }
+
+    .a-book-now,
+    .a-book-now-slide {
+        color: white;
+        text-decoration: none;
+        padding: 5px;
+        border-radius: 3px;
+        background-color: #0087C1;
+        width: 30%;
+        height: 10%;
+        margin-top: 10px;
+        margin-left: 10px;
+        font-size: 20px;
+    }
+
+    .div1-image-example-rest-place p {
+        color: white;
+        background-color: #000E41;
+        padding: 5px;
+        height: 30px;
+        width: 30px;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-right: 10px;
+        font-size: 20px;
+    }
+
+    #rating-hotels2,
+    #rating-hotels3 {
+        color: white;
+        background-color: #000E41;
+        padding: 5px;
+        height: 30px;
+        width: 30px;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-right: 10px;
+        font-size: 20px;
+    }
+
+    #title-hotels1,
+    #title-hotels2 {
+        font-size: 30px;
+        margin-top: 10px;
+    }
+
+    .div-location-example-rest-place {
+        margin-bottom: 30px;
+    }
+
+    .div-location-example-rest-place p{
+        width: 90%;
+    }
+
+    .div-location-example-rest-place img{
+        width: 25px;
+        height: 20px;
+        margin-top: 5px;
+    }
+
+    #location-hotels1,
+    #location-hotels2 {
+        font-size: 20px;
+    }
+
+    #title-hotels3 {
+        font-size: 25px;
+        margin-top: 250px;
+        color: #000E41;
+        font-family: popins-medium;
+        text-shadow: none !important
+    }
+
+    #location-hotels3 {
+        font-size: 15px;
+        color: #000E41;
+        text-shadow: none !important
+    }
+
+    .div2-location-sub-sub-main-rest-place img{
+        width: 25px;
+        height: 20px;
+        margin-top: 5px;
+    }
+
+    .div-rest-place-title {
+        margin-top: -390px;
+    }
+
+    .div-footer-information {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .div2-information {
+        padding: 4vw;
+    }
+
+    .div-main-footer {
+        padding-top: 25px;
+    }
+
+    svg {
+        margin-top: -100px;
+    }
+
+    .div-kelingking-beach-button {
+        margin-top: 30vw;
+    }
+
+    .div-map-kelingking-beach {
+        display: none;
+    }
+
+    .button-text:hover,
+    .a-kelingking-beach-text:hover,
+    .button-hot-place:hover,
+    .a-book-now:hover,
+    .a-souvenirs:hover,
+    .a-button-faq:hover,
+    .a-book-now-slide:hover {
+        background-color: #00567b;
+    }
+
+    .button-text,
+    .a-kelingking-beach-text,
+    .button-hot-place,
+    .a-book-now,
+    .a-souvenirs,
+    .a-button-faq,
+    .a-book-now-slide {
+        font-size: 4vw;
+        /* font-family: popins-extra-bold; */
+        padding: 2.5vw !important
+    }
 }
 
 
 
+@media(max-width: 1023px) {
+    a:nth-child(1):hover~.animation {
+        /* width: 90px; */
+        /* right: 637px; */
+        left: 49vw;
+    }
+    
+    a:nth-child(2):hover~.animation {
+        /* width: 90px; */
+        /* right: 472px; */
+        left: 59vw;
+    }
+    
+    a:nth-child(3):hover~.animation {
+        /* width: 100px; */
+        /* right: 305px; */
+        left: 67.6vw;
+    }
+    
+    a:nth-child(4):hover~.animation {
+        /* width: 110px; */
+        /* right: 120px; */
+        left: 77.5vw;
+    }
+    
+    a:nth-child(5):hover~.animation {
+        /* width: 110px; */
+        /* right: 120px; */
+        left: 87vw;
+    }
+
+
+
+
+
+
+
+
+
+    .container {
+        overflow: hidden;
+    }
+
+    .kebaya2-img {
+        width: 18.8vw;
+    }
+
+    .div-main-souvenirs {
+        height: auto;
+    }
+
+    .div-item1,
+    .div-item2,
+    .div-item3,
+    .div-item4,
+    .di-item5,
+    .div-item6 {
+        width: auto;
+    }
+
+    .udeng-img {
+        width: 9vw !important;
+        height: 11vw !important;
+    }
+
+    .div-main-faq {
+        width: 85%;
+    }
+
+    .a-button-faq {
+        width: 45%;
+    }
+
+    .div-footer-information {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .div-pop-up-login {
+        width: 40%;
+        height: 60%;
+    }
+}
 
 
 
